--- a/views/index.jade
+++ b/views/index.jade
@@ -20,6 +20,7 @@ html
               if tokenRequired
                 input(type="text", name="token", placeholder="#{__('ENTER_TOKEN')}")#slack-token.field
               input(type="submit", value="Join").submit
+              h2 or login <a href="http://google.com>here</a>
     script.
       var tokenRequired = #{tokenRequired};
       var form = document.getElementById('join-form');
