--- a/views/index.jade
+++ b/views/index.jade
@@ -20,7 +20,7 @@ html
               if tokenRequired
                 input(type="text", name="token", placeholder="#{__('ENTER_TOKEN')}")#slack-token.field
               input(type="submit", value="Join").submit
-              h3 or sign in <a href="http://google.com">here</a>
+              h2 or <a href="http://dfinity.slack.com">sign in</a>
     script.
       var tokenRequired = #{tokenRequired};
       var form = document.getElementById('join-form');
