--- a/views/index.jade
+++ b/views/index.jade
@@ -20,7 +20,7 @@ html
               if tokenRequired
                 input(type="text", name="token", placeholder="#{__('ENTER_TOKEN')}")#slack-token.field
               input(type="submit", value="Join").submit
-              h2 or <a href="http://dfinity.slack.com" target="_blank" style="text-decoration: none"><font color="#75DB3C">sign in</font></a>
+              h2 <font color="#fff">or</font> <a href="http://dfinity.slack.com" target="_blank" style="text-decoration: none"><font color="#75DB3C">sign in</font></a>
               
     script.
       var tokenRequired = #{tokenRequired};
